[package]
name = "execs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shlex = "1"
schemars = { version = "0.8", features = ["url", "chrono"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = { version = "1", features = ["preserve_order"] }
url = { version = "2", features = ["serde"] }
tracing = "0.1"
async-trait = "*"
anyhow = "1"
tempfile="3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
shellexpand = "2"